max_execution_time erhöht für mails

--- a/public/liga/php.ini
+++ b/public/liga/php.ini
@@ -8,6 +8,7 @@ session.cookie_secure=On
 upload_max_filesize = 20M
 post_max_size = 20M
 memory_limit = 512M
+max_execution_time = 90
 #https://www.ionos.de/hilfe/hosting/php-fuer-web-projekt-verwenden/php-einstellungen-ueber-phpini-aendern/
 #https://www.php.net/manual/de/session.security.ini.php
 #https://www.php.net/manual/de/features.session.security.management.php
