php.ini verändert
Damit es keine Fehler bei den Error_Logs von PHP kommt, müssen diese nun immer manuell aktiviert werden.

--- a/public/liga/php.ini
+++ b/public/liga/php.ini
@@ -9,12 +9,15 @@ upload_max_filesize = 20M
 post_max_size = 20M
 memory_limit = 512M
 max_execution_time = 90
-#https://www.ionos.de/hilfe/hosting/php-fuer-web-projekt-verwenden/php-einstellungen-ueber-phpini-aendern/
-#https://www.php.net/manual/de/session.security.ini.php
-#https://www.php.net/manual/de/features.session.security.management.php
+# https://www.ionos.de/hilfe/hosting/php-fuer-web-projekt-verwenden/php-einstellungen-ueber-phpini-aendern/
+# https://www.php.net/manual/de/session.security.ini.php
+# https://www.php.net/manual/de/features.session.security.management.php
 
-error_reporting = E_ALL | E_STRICT
-log_errors = On
-display_errors = Off
-error_log = /kunden/homepages/42/d804653108/htdocs/test.einrad.hockey/system/logs/log_php.log
+# ACTIVATE FOR PHP_ERROR LOGS
+# SET CORRECT PATH FOR error_log = ...!
+
+# error_reporting = E_ALL | E_STRICT
+# log_errors = On
+# display_errors = Off
+# error_log = /kunden/homepages/42/d804653108/htdocs/test.einrad.hockey/system/logs/log_php.log
 # https://www.ionos.de/hilfe/hosting/problemloesungen-fuer-php/error-logs-aktivieren/
