gitignore für Bilder, Videos und backup files

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,10 @@ system/backups/
 system/logs/
 classes/xml.class.php_bak
 public/xml/test.php
+
+# Backup Dateien ignorieren:
+*~
+
+# Bilder und Videos ignorieren:
+public/schiricenter/bilder/*
+public/schiricenter/videos/*
