--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
         "doctrine/orm": "*",
         "symfony/cache": "*",
         "doctrine/annotations": "^1.13",
-        "jenssegers/date": "^4.0"
+        "jenssegers/date": "^4.0",
+        "spatie/array-to-xml": "^3.1"
     },
 
     "autoload": {
