--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "symfony/cache": "*",
         "doctrine/annotations": "^1.13",
         "jenssegers/date": "^4.0",
-        "spatie/array-to-xml": "^3.1"
+        "spatie/array-to-xml": "^3.1",
+        "phpoffice/phpspreadsheet": "^1.28"
     },
 
     "autoload": {
