--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
         "phpmailer/phpmailer": "^6.2",
         "mpdf/mpdf": "^8.0",
         "gregwar/captcha": "1.*",
-        "doctrine/orm": "*",
+        "doctrine/orm": "2.13.2",
         "symfony/cache": "*",
         "doctrine/annotations": "^1.13",
         "jenssegers/date": "^4.0",
