--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
     "require": {
         "phpmailer/phpmailer": "^6.2",
-        "mpdf/mpdf": "^8.0",
+        "mpdf/mpdf": "8.2.2",
         "gregwar/captcha": "1.*",
-        "doctrine/orm": "2.17.2",
+        "doctrine/orm": "2.13.2",
         "symfony/cache": "*",
         "doctrine/annotations": "^1.13",
         "jenssegers/date": "^4.0",
@@ -15,12 +15,7 @@
         "psr-4": {
             "App\\":"src"
         }
-    },
-
-    "config": {
-        "platform": {
-            "php": "8.0.0"
-        }
     }
+
 
 }
