refactor of files related to docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,47 +2,40 @@ version: "3.8"
 
 services:
   web:
-    container_name: ligaseite-webserver
     image: einradhockeyliga-apache
     build:
       context: .
-      dockerfile: Dockerfile
+    container_name: ligaseite-web
+    restart: always
+    links:
+      - mariadb
     volumes:
-      - .:/var/www/html
-      - /var/www/html/vendor
+      - '.:/var/www/html'
     ports:
-      - "80:80"
-    depends_on:
-      - db
+      - '80:80'
 
-  db:
-    container_name: ligaseite-mysql
-    image: mysql:8.0
+  mariadb:
+    image: mariadb:10.11
+    container_name: ligaseite-mariadb
+    restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: db_localhost
-      MYSQL_USER: user
-      MYSQL_PASSWORD: password
+      MYSQL_ROOT_PASSWORD: "${MYSQL_ROOT_PASSWORD}"
+      MYSQL_USER: "${MYSQL_USER}"
+      MYSQL_PASSWORD: "${MYSQL_PASSWORD}"
     volumes:
-      - db_data:/var/lib/mysql
+      - 'mariadb-data:/var/lib/mysql/'
       - ./_localhost/db_localhost.sql:/docker-entrypoint-initdb.d/db_localhost.sql
-    ports:
-      - "3306:3306"
 
   phpmyadmin:
-    container_name: ligaseite-phpmyadmin
     image: phpmyadmin
+    container_name: ligaseite-phpmyadmin
+    restart: always
     environment:
-      PMA_HOST: db
-      MYSQL_ROOT_PASSWORD: root
+      PMA_HOST: mariadb
+    links:
+      - mariadb
     ports:
-      - "8080:80"
-    depends_on:
-      - db
-
-networks:
-  ligaseite-network:
-    external: true
+      - '8080:80'
 
 volumes:
-  db_data:
+  mariadb-data:
