--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,14 @@
 {
     "require": {
-        "phpmailer/phpmailer": "^6.2",
-        "mpdf/mpdf": "8.2.2",
-        "gregwar/captcha": "1.*",
-        "doctrine/orm": "2.13.2",
-        "symfony/cache": "*",
-        "doctrine/annotations": "^1.13",
-        "jenssegers/date": "^4.0",
-        "spatie/array-to-xml": "^3.1",
-        "phpoffice/phpspreadsheet": "^1.28"
+        "phpmailer/phpmailer": "v6.9.3",
+        "mpdf/mpdf": "8.2.5",
+        "gregwar/captcha": "v1.2.1",
+        "doctrine/orm": "2.20.1",
+        "symfony/cache": "7.2.1",
+        "doctrine/annotations": "1.14.4",
+        "jenssegers/date": "v4.0.0",
+        "spatie/array-to-xml": "3.4.0",
+        "phpoffice/phpspreadsheet": "3.7.0"
     },
 
     "autoload": {
