--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,11 @@
 {
     "require": {
-        "phpmailer/phpmailer": "v6.9.3",
+        "phpmailer/phpmailer": "6.9.3",
         "mpdf/mpdf": "8.2.5",
         "gregwar/captcha": "v1.2.1",
-        "doctrine/orm": "2.20.1",
-        "symfony/cache": "7.2.1",
-        "doctrine/annotations": "1.14.4",
+        "doctrine/orm": "3.3.1",
+        "symfony/cache": "v7.2.1",
+        "doctrine/annotations": "2.0.2",
         "jenssegers/date": "v4.0.0",
         "spatie/array-to-xml": "3.4.0",
         "phpoffice/phpspreadsheet": "3.7.0"
