--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,8 @@ public/uploads/s/*
 !public/uploads/s/spielplan/.gitkeep
 !public/uploads/s/.gitkeep
 
-tmp
-!tmp/.gitkeep
+cache/
+!cache/.gitkeep
 
 # System Backups und Logs
 system/backups/
