--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
       - ./public:/var/www/html/public
       - ./src:/var/www/html/src
       - ./system:/var/www/html/system
+      - ./cache/proxy:/var/www/html/cache/proxy
       - ./templates:/var/www/html/templates
       - ./init.php:/var/www/html/init.php
       - ./env.php:/var/www/html/env.php
