--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "psr-4": {
             "App\\":"src"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "12.2.5"
     }
-
-
 }
